data splitting, adding functions to extract features

--- a/cifar-analysis.ipynb
+++ b/cifar-analysis.ipynb
@@ -9,7 +9,23 @@
     "import pickle\n",
     "import collections\n",
     "import time\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "\n",
+    "from keras.preprocessing import image\n",
+    "from PIL import Image\n",
+    "from keras.applications.inception_v3 import InceptionV3\n",
+    "\n",
+    "import matplotlib.pyplot as plt\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from skimage.transform import resize\n",
+    "from skimage.feature import hog\n",
+    "from sklearn import svm\n",
+    "from sklearn.manifold import TSNE\n",
+    "from sklearn.decomposition import PCA\n",
+    "from sklearn.svm import LinearSVC\n",
+    "from sklearn.metrics import accuracy_score, confusion_matrix\n",
+    "\n",
+    "%config IPCompleter.greedy=True"
    ]
   },
   {
@@ -124,11 +140,69 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Randomly selecting images to modelling"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#train and test sets\n",
+    "x_left, x_small, y_left, y_small = train_test_split(\n",
+    "    x, y, test_size=0.1, random_state=42)\n",
+    "x_left, x_test, y_left, y_test = train_test_split(\n",
+    "    x_left, y_left, test_size=0.05, random_state=42)\n",
+    "\n",
+    "#remove auxiliary data\n",
+    "del x_left\n",
+    "del y_left\n",
+    "del x\n",
+    "del y\n",
+    "x_small.shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Extracting features from training and test datasets"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def preprocess_inception (df): #function for generating CNN from image data\n",
+    "    df_small_reshaped=[]\n",
+    "    time_start=time.time() #timer\n",
+    "    for i in range(len(df)): \n",
+    "        df_small_reshaped.append(df[i].reshape(3,1024).T.reshape(32,32,3))\n",
+    "    df= np.asarray(df_small_reshaped)\n",
+    "    print(\"Image data reshaped\")\n",
+    "    \n",
+    "    #removing top layer, input shape set to default for inception model\n",
+    "    model = InceptionV3(weights='imagenet', include_top=False, input_shape=(139, 139, 3)) \n",
+    "    print(\"Model created\")\n",
+    "    \n",
+    "    df_train_resized = np.array([resize(df[i], (139, 139, 3)) \n",
+    "                        for i in range(0, len(df))]).astype('float32')\n",
+    "    print(\"image resized to suit inception model\")\n",
+    "    features_inception = model.predict(df_train_resized, verbose=1)\n",
+    "    print(\"features predicted\")\n",
+    "    features_inception = np.squeeze(features_inception)\n",
+    "    features_inception = features_inception.reshape((len(df), 3*3*2048))\n",
+    "    print(\"features reshaped to suit sklearn models\")\n",
+    "    print(\"total time:  \", time.time()-time_start, \" s\")\n",
+    "    return features_inception\n",
+    "    "
+   ]
   }
  ],
  "metadata": {
