created HOG classifier

--- a/cifar-analysis.ipynb
+++ b/cifar-analysis.ipynb
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 32,
    "metadata": {
     "scrolled": false
    },
@@ -83,7 +83,7 @@
        " b'num_vis': 3072}"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 35,
    "metadata": {
     "scrolled": true
    },
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -171,14 +171,14 @@
        "(5000, 3072)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "#train and test sets\n",
-    "x_left, x_train, y_left, y_small = train_test_split(\n",
+    "x_left, x_train, y_left, y_train = train_test_split(\n",
     "    x, y, test_size=0.1, random_state=42)\n",
     "x_left, x_test, y_left, y_test = train_test_split(\n",
     "    x_left, y_left, test_size=0.05, random_state=42)\n",
@@ -300,16 +300,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def compute_hog(data):\n",
+    "    hog_features=[]\n",
+    "    for image in data:\n",
+    "        hog_features.append( hog(image, orientations=8))\n",
+    "\n",
+    "    hog_features=np.asarray(hog_features)\n",
+    "    return hog_features"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\ProgramData\\Anaconda3\\lib\\site-packages\\skimage\\feature\\_hog.py:119: skimage_deprecation: Default value of `block_norm`==`L1` is deprecated and will be changed to `L2-Hys` in v0.15\n",
+      "  'be changed to `L2-Hys` in v0.15', skimage_deprecation)\n"
+     ]
+    }
+   ],
+   "source": [
+    "features_hog_train=compute_hog(features_hog_train)\n",
+    "features_hog_test=compute_hog(features_hog_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x1d201c99e10>"
+       "<matplotlib.image.AxesImage at 0x1d201ea9cf8>"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -331,164 +365,163 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 54,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(5000, 288)"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "hog_features_train.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 43,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\ProgramData\\Anaconda3\\lib\\site-packages\\skimage\\feature\\_hog.py:119: skimage_deprecation: Default value of `block_norm`==`L1` is deprecated and will be changed to `L2-Hys` in v0.15\n",
-      "  'be changed to `L2-Hys` in v0.15', skimage_deprecation)\n"
-     ]
-    }
-   ],
-   "source": [
-    "features_hog_train= preprocess_inception(x_train, only_reshape=True)\n",
-    "features_hog_test= preprocess_inception(x_test, only_reshape=True)\n",
-    "#to use hog technique we apply greyscale conversion to full dataset\n",
-    "x = x_train\n",
-    "image=  np.squeeze((0.21 * x[:,:,:,:1]) + (0.72 * x[:,:,:,1:2]) + (0.07 * x[:,:,:,-1:]))\n",
-    "image.shape\n",
-    "\n",
-    "hog_features=[]\n",
-    "for i in image:\n",
-    "    hog_features.append( hog(i, orientations=8))\n",
-    "    \n",
-    "hog_features=np.asarray(hog_features)\n",
-    "###add plotting"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 46,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "'SVC' object has no attribute 'shape'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-46-a0461c1197ee>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[0mhog_clf\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0msvm\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mSVC\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[0mhog_fitted\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mhog_clf\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfit\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mhog_features\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0my_small\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 5\u001b[1;33m \u001b[0mhog_fitted\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m: 'SVC' object has no attribute 'shape'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#creating shallow classifier using hog features\n",
-    "\n",
-    "hog_clf = svm.SVC()\n",
-    "hog_fitted = hog_clf.fit(hog_features, y_small)  \n"
+    "hog_clf = LinearSVC(C=2)\n",
+    "hog_fitted = hog_clf.fit(features_hog_train, np.asarray(y_train))  \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(5000,)"
+       "(2250,)"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "hog_predicted = hog_fitted.predict(hog_features)\n",
+    "hog_predicted = hog_fitted.predict(features_hog_test)\n",
     "hog_predicted.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
-   "metadata": {},
+   "execution_count": 56,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.43822222222222224\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
-       "array([[  0,   0,   0,   0,   0,   0,   0,   0,   0,   0],\n",
-       "       [  0,   0,   0,   0,   0,   0,   0,   0,   0,   0],\n",
-       "       [476, 487, 527, 523, 486, 504, 485, 509, 503, 500],\n",
-       "       [  0,   0,   0,   0,   0,   0,   0,   0,   0,   0],\n",
-       "       [  0,   0,   0,   0,   0,   0,   0,   0,   0,   0],\n",
-       "       [  0,   0,   0,   0,   0,   0,   0,   0,   0,   0],\n",
-       "       [  0,   0,   0,   0,   0,   0,   0,   0,   0,   0],\n",
-       "       [  0,   0,   0,   0,   0,   0,   0,   0,   0,   0],\n",
-       "       [  0,   0,   0,   0,   0,   0,   0,   0,   0,   0],\n",
-       "       [  0,   0,   0,   0,   0,   0,   0,   0,   0,   0]], dtype=int64)"
+       "array([[107,   6,  23,  11,  23,   5,  12,  11,  27,   4],\n",
+       "       [ 13, 133,  12,  19,   5,  10,  18,   5,  21,  38],\n",
+       "       [ 19,   0,  70,  21,  26,  27,  29,  21,   8,   3],\n",
+       "       [  2,   8,  14,  40,  18,  30,  17,  13,   1,   4],\n",
+       "       [  3,   4,  10,   8,  44,   6,   5,  12,   0,   2],\n",
+       "       [  5,   1,  35,  44,  16,  88,  13,  25,   3,  12],\n",
+       "       [ 11,  13,  22,  35,  25,  29, 145,   5,   9,   3],\n",
+       "       [  9,   6,  11,  28,  41,  27,  10, 122,   6,   9],\n",
+       "       [ 52,  29,  13,   3,  19,   1,   8,   4, 125,  18],\n",
+       "       [  9,  21,   4,  11,  11,   4,   4,  10,  16, 112]], dtype=int64)"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "\n",
-    "accuracy_score(hog_predicted, y_small)\n",
-    "confusion_matrix(hog_predicted, y_small)\n",
-    "#zjebane w chuj "
+    "print(accuracy_score(hog_predicted, y_test))\n",
+    "confusion_matrix(hog_predicted, y_test)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 51,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fitting 2 folds for each of 6 candidates, totalling 12 fits\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Parallel(n_jobs=-1)]: Done  12 out of  12 | elapsed:   25.8s finished\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[LibLinear]"
+     ]
+    }
+   ],
    "source": [
-    "#x_train=np.load(\"training.npy\")\n",
-    "#saving features, training data and labels to separate np files fpr backup\n",
-    "np.save(\"features.npy\", features)\n",
-    "np.save(\"training.npy\", x_train)\n",
-    "np.save(\"labels.npy\", y_small)"
+    "from sklearn.model_selection import GridSearchCV\n",
+    "hyperparameters={'C':[0.001, 0.01, 0.1, 1, 2,5]}\n",
+    "clf_hog_cv = GridSearchCV(LinearSVC(verbose=1, random_state=1), hyperparameters, cv=2, verbose=1, n_jobs=-1,return_train_score=True)\n",
+    "\n",
+    "model_hog_gridCV = clf_hog_cv.fit(features_hog_train, np.asarray(y_train))\n",
+    "#best acc using C=2, about 0.44 on test set"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 53,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'mean_fit_time': array([0.6950866 , 0.70285249, 1.19491208, 2.36820626, 3.53367257,\n",
+       "        6.18408477]),\n",
+       " 'std_fit_time': array([0.00781572, 0.06250119, 0.03903544, 0.00603509, 0.01562285,\n",
+       "        0.06421578]),\n",
+       " 'mean_score_time': array([0.0233928 , 0.03123987, 0.00781381, 0.01561725, 0.01562428,\n",
+       "        0.00777233]),\n",
+       " 'std_score_time': array([7.84289837e-03, 1.56186819e-02, 7.81381130e-03, 2.02655792e-06,\n",
+       "        4.29153442e-06, 7.77232647e-03]),\n",
+       " 'param_C': masked_array(data=[0.001, 0.01, 0.1, 1, 2, 5],\n",
+       "              mask=[False, False, False, False, False, False],\n",
+       "        fill_value='?',\n",
+       "             dtype=object),\n",
+       " 'params': [{'C': 0.001},\n",
+       "  {'C': 0.01},\n",
+       "  {'C': 0.1},\n",
+       "  {'C': 1},\n",
+       "  {'C': 2},\n",
+       "  {'C': 5}],\n",
+       " 'split0_test_score': array([0.19776268, 0.31362365, 0.40950859, 0.44346784, 0.44706352,\n",
+       "        0.44107072]),\n",
+       " 'split1_test_score': array([0.2102523 , 0.33880657, 0.39887865, 0.42811374, 0.43251902,\n",
+       "        0.42330797]),\n",
+       " 'mean_test_score': array([0.204 , 0.3262, 0.4042, 0.4358, 0.4398, 0.4322]),\n",
+       " 'std_test_score': array([0.0062448 , 0.01259145, 0.00531496, 0.00767705, 0.00727225,\n",
+       "        0.00888137]),\n",
+       " 'rank_test_score': array([6, 5, 4, 2, 1, 3]),\n",
+       " 'split0_train_score': array([0.21786143, 0.35482579, 0.45214257, 0.51581898, 0.53424109,\n",
+       "        0.54865839]),\n",
+       " 'split1_train_score': array([0.20015981, 0.36356372, 0.43907311, 0.51977627, 0.53615661,\n",
+       "        0.55453456]),\n",
+       " 'mean_train_score': array([0.20901062, 0.35919476, 0.44560784, 0.51779763, 0.53519885,\n",
+       "        0.55159647]),\n",
+       " 'std_train_score': array([0.00885081, 0.00436897, 0.00653473, 0.00197864, 0.00095776,\n",
+       "        0.00293808])}"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "from sklearn import svm\n",
-    "clf = svm.SVC()\n",
-    "fitted = clf.fit(features, y_small)  \n",
-    "predicted = fitted.predict(features)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "accuracy_score(predicted, y_small[0:100])\n",
-    "#zjebane w chuj "
+    "model_hog_gridCV.cv_results_"
    ]
   },
   {
@@ -541,7 +574,7 @@
     "#małe C- underfituje \n",
     "clf_linear = LinearSVC(verbose=1, C=0.1)\n",
     "print(\"model created\")\n",
-    "fitted_inception = clf_linear.fit(features_inception_train/to_norm, np.asarray(y_small))  \n",
+    "fitted_inception = clf_linear.fit(features_inception_train/to_norm, np.asarray(y_train))  \n",
     "print(\"model fitted\")\n",
     "print(\"time:\", time.time()-time_start)"
    ]
@@ -571,8 +604,8 @@
    ],
    "source": [
     "inception_predicted_train = fitted_inception.predict(features_inception_train)\n",
-    "print(accuracy_score(inception_predicted_train, np.asarray(y_small)))\n",
-    "print(confusion_matrix(inception_predicted_train, np.asarray(y_small)))"
+    "print(accuracy_score(inception_predicted_train, np.asarray(y_train)))\n",
+    "print(confusion_matrix(inception_predicted_train, np.asarray(y_train)))"
    ]
   },
   {
@@ -646,7 +679,7 @@
     "hyperparameters={'C':[0.001, 0.01, 0.1, 1]}\n",
     "clf_cv = GridSearchCV(LinearSVC(verbose=1, random_state=1), hyperparameters, cv=2, verbose=1, n_jobs=-1,return_train_score=True)\n",
     "\n",
-    "model_gridCV = clf_cv.fit(features_inception_train/to_norm, np.asarray(y_small))"
+    "model_gridCV = clf_cv.fit(features_inception_train/to_norm, np.asarray(y_train))"
    ]
   },
   {
@@ -747,7 +780,7 @@
     "\n",
     "clf_gbc = RandomForestClassifier(verbose=1)\n",
     "print(\"model created\")\n",
-    "fitted_inception_gbc = clf_gbc.fit(features_inception_train/to_norm, np.asarray(y_small))  \n",
+    "fitted_inception_gbc = clf_gbc.fit(features_inception_train/to_norm, np.asarray(y_train))  \n",
     "print(\"model fitted\")\n",
     "print(\"time:\", time.time()-time_start)"
    ]
@@ -893,7 +926,7 @@
     "hyperparameters={'C':[0.001, 0.01, 0.1, 1]}\n",
     "clf_pca_cv = GridSearchCV(LinearSVC(verbose=1, random_state=1), hyperparameters, cv=2, verbose=1, n_jobs=-1,return_train_score=True)\n",
     "\n",
-    "model_pca_gridCV = clf_pca_cv.fit(pca_reduced_train, np.asarray(y_small))"
+    "model_pca_gridCV = clf_pca_cv.fit(pca_reduced_train, np.asarray(y_train))"
    ]
   },
   {
@@ -962,7 +995,7 @@
     "#using svm to classify test data\n",
     "clf_pca = LinearSVC(verbose=1, C=0.1)\n",
     "print(\"model created\")\n",
-    "fitted_inception_pca = clf_pca.fit(pca_reduced_train/to_norm_pca, np.asarray(y_small))  \n",
+    "fitted_inception_pca = clf_pca.fit(pca_reduced_train/to_norm_pca, np.asarray(y_train))  \n",
     "\n",
     "predicted_svm_pca = fitted_inception_pca.predict(pca_reduced_test/to_norm_pca)"
    ]
@@ -1072,7 +1105,7 @@
     "from keras.utils import np_utils\n",
     "\n",
     "# one-hot encode the labels\n",
-    "y_small_onehot = np_utils.to_categorical(y_small, 10)\n",
+    "y_train_onehot = np_utils.to_categorical(y_train, 10)\n",
     "y_test_onehot = np_utils.to_categorical(y_test, 10)"
    ]
   },
@@ -1129,7 +1162,7 @@
     }
    ],
    "source": [
-    "model_custom.fit(features_inception_train, y_small_onehot, epochs=25, batch_size=50, verbose=2, validation_split=0.2)"
+    "model_custom.fit(features_inception_train, y_train_onehot, epochs=25, batch_size=50, verbose=2, validation_split=0.2)"
    ]
   },
   {
@@ -1296,7 +1329,7 @@
     }
    ],
    "source": [
-    "pca_df = pd.DataFrame({'x1':pca_results[:,0], 'x2':pca_results[:,1], 'label':y_small})\n",
+    "pca_df = pd.DataFrame({'x1':pca_results[:,0], 'x2':pca_results[:,1], 'label':y_train})\n",
     "pca_df.head()"
    ]
   },
@@ -1382,7 +1415,7 @@
    ],
    "source": [
     "import pandas as pd\n",
-    "tsne_df = pd.DataFrame({'x1':tsne_results[:,0], 'x2':tsne_results[:,1], 'label':y_small})\n",
+    "tsne_df = pd.DataFrame({'x1':tsne_results[:,0], 'x2':tsne_results[:,1], 'label':y_train})\n",
     "tsne_df.head()"
    ]
   },
@@ -1487,7 +1520,7 @@
    "source": [
     "examples_indexes=[]\n",
     "for number in range(0,11):\n",
-    "    examples_indexes.append( [i for i, n in enumerate(y_small) if n==number][0:10])\n",
+    "    examples_indexes.append( [i for i, n in enumerate(y_train) if n==number][0:10])\n",
     "\n",
     "\n",
     "for i in range(len(examples_indexes)):\n",
