--- a/cifar-analysis.ipynb
+++ b/cifar-analysis.ipynb
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 58,
    "metadata": {
     "scrolled": false
    },
@@ -83,7 +83,7 @@
        " b'num_vis': 3072}"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 61,
    "metadata": {
     "scrolled": true
    },
@@ -157,7 +157,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Randomly selecting images to modelling"
+    "## Selecting all images to modelling"
    ]
   },
   {
@@ -178,17 +178,17 @@
    ],
    "source": [
     "#train and test sets\n",
-    "x_left, x_train, y_left, y_train = train_test_split(\n",
-    "    x, y, test_size=0.1, random_state=42)\n",
-    "x_left, x_test, y_left, y_test = train_test_split(\n",
-    "    x_left, y_left, test_size=0.05, random_state=42)\n",
+    "#x_left, x_train, y_left, y_train = train_test_split(\n",
+    "#    x, y, test_size=0.1, random_state=42)\n",
+    "#x_left, x_test, y_left, y_test = train_test_split(\n",
+    "#    x_left, y_left, test_size=0.05, random_state=42)\n",
     "\n",
     "#remove auxiliary data\n",
-    "del x_left\n",
-    "del y_left\n",
-    "del x\n",
-    "del y\n",
-    "x_train.shape"
+    "#del x_left\n",
+    "#del y_left\n",
+    "#del x\n",
+    "#del y\n",
+    "#x_train.shape"
    ]
   },
   {
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -234,6 +234,46 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Image data reshaped\n",
+      "Model created\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\ProgramData\\Anaconda3\\lib\\site-packages\\skimage\\transform\\_warps.py:84: UserWarning: The default mode, 'constant', will be changed to 'reflect' in skimage 0.15.\n",
+      "  warn(\"The default mode, 'constant', will be changed to 'reflect' in \"\n"
+     ]
+    },
+    {
+     "ename": "MemoryError",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mMemoryError\u001b[0m                               Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-63-097d3f9fab00>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mfeatures_inception_full\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mpreprocess_inception\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mx\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32m<ipython-input-62-687fb74a9119>\u001b[0m in \u001b[0;36mpreprocess_inception\u001b[1;34m(df, only_reshape)\u001b[0m\n\u001b[0;32m     15\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     16\u001b[0m     df_train_resized = np.array([resize(df[i], (139, 139, 3)) \n\u001b[1;32m---> 17\u001b[1;33m                         for i in range(0, len(df))]).astype('float32')\n\u001b[0m\u001b[0;32m     18\u001b[0m     \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"image resized to suit inception model\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     19\u001b[0m     \u001b[0mfeatures_inception\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mmodel\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpredict\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdf_train_resized\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mverbose\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m<ipython-input-62-687fb74a9119>\u001b[0m in \u001b[0;36m<listcomp>\u001b[1;34m(.0)\u001b[0m\n\u001b[0;32m     15\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     16\u001b[0m     df_train_resized = np.array([resize(df[i], (139, 139, 3)) \n\u001b[1;32m---> 17\u001b[1;33m                         for i in range(0, len(df))]).astype('float32')\n\u001b[0m\u001b[0;32m     18\u001b[0m     \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"image resized to suit inception model\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     19\u001b[0m     \u001b[0mfeatures_inception\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mmodel\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpredict\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdf_train_resized\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mverbose\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32mC:\\ProgramData\\Anaconda3\\lib\\site-packages\\skimage\\transform\\_warps.py\u001b[0m in \u001b[0;36mresize\u001b[1;34m(image, output_shape, order, mode, cval, clip, preserve_range)\u001b[0m\n\u001b[0;32m    133\u001b[0m         out = warp(image, tform, output_shape=output_shape, order=order,\n\u001b[0;32m    134\u001b[0m                    \u001b[0mmode\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mmode\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcval\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mcval\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mclip\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mclip\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 135\u001b[1;33m                    preserve_range=preserve_range)\n\u001b[0m\u001b[0;32m    136\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    137\u001b[0m     \u001b[1;32mreturn\u001b[0m \u001b[0mout\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32mC:\\ProgramData\\Anaconda3\\lib\\site-packages\\skimage\\transform\\_warps.py\u001b[0m in \u001b[0;36mwarp\u001b[1;34m(image, inverse_map, map_args, output_shape, order, mode, cval, clip, preserve_range)\u001b[0m\n\u001b[0;32m    774\u001b[0m                                            \u001b[0moutput_shape\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0moutput_shape\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    775\u001b[0m                                            order=order, mode=mode, cval=cval))\n\u001b[1;32m--> 776\u001b[1;33m                 \u001b[0mwarped\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdstack\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdims\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    777\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    778\u001b[0m     \u001b[1;32mif\u001b[0m \u001b[0mwarped\u001b[0m \u001b[1;32mis\u001b[0m \u001b[1;32mNone\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32mC:\\ProgramData\\Anaconda3\\lib\\site-packages\\numpy\\lib\\shape_base.py\u001b[0m in \u001b[0;36mdstack\u001b[1;34m(tup)\u001b[0m\n\u001b[0;32m    419\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    420\u001b[0m     \"\"\"\n\u001b[1;32m--> 421\u001b[1;33m     \u001b[1;32mreturn\u001b[0m \u001b[0m_nx\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mconcatenate\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0matleast_3d\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0m_m\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0m_m\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mtup\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m2\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    422\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    423\u001b[0m \u001b[1;32mdef\u001b[0m \u001b[0m_replace_zero_by_x_arrays\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0msub_arys\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mMemoryError\u001b[0m: "
+     ]
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
    "outputs": [],
@@ -254,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -262,45 +302,21 @@
      "output_type": "stream",
      "text": [
       "Image data reshaped\n",
-      "selected only reshaping mode\n",
-      "Image data reshaped\n",
       "selected only reshaping mode\n"
      ]
     }
    ],
    "source": [
     "#preprocessing image dataset to greyscale\n",
-    "features_hog_train= preprocess_inception(x_train, only_reshape=True)\n",
-    "features_hog_test= preprocess_inception(x_test, only_reshape=True)\n",
+    "features_hog_train= preprocess_inception(x, only_reshape=True)\n",
+    "#features_hog_test= preprocess_inception(x_test, only_reshape=True)\n",
     "features_hog_train=np.squeeze((0.21 * features_hog_train[:,:,:,:1]) + (0.72 * features_hog_train[:,:,:,1:2]) + (0.07 * features_hog_train[:,:,:,-1:]))\n",
-    "features_hog_test=np.squeeze((0.21 * features_hog_test[:,:,:,:1]) + (0.72 * features_hog_test[:,:,:,1:2]) + (0.07 * features_hog_test[:,:,:,-1:]))"
+    "#features_hog_test=np.squeeze((0.21 * features_hog_test[:,:,:,:1]) + (0.72 * features_hog_test[:,:,:,1:2]) + (0.07 * features_hog_test[:,:,:,-1:]))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\ProgramData\\Anaconda3\\lib\\site-packages\\skimage\\feature\\_hog.py:119: skimage_deprecation: Default value of `block_norm`==`L1` is deprecated and will be changed to `L2-Hys` in v0.15\n",
-      "  'be changed to `L2-Hys` in v0.15', skimage_deprecation)\n"
-     ]
-    }
-   ],
-   "source": [
-    "hog_features_train=[]\n",
-    "for image in features_hog_train:\n",
-    "    hog_features_train.append( hog(image, orientations=8))\n",
-    "\n",
-    "hog_features_train=np.asarray(hog_features_train)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -315,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -329,7 +345,7 @@
    ],
    "source": [
     "features_hog_train=compute_hog(features_hog_train)\n",
-    "features_hog_test=compute_hog(features_hog_test)"
+    "#features_hog_test=compute_hog(features_hog_test)"
    ]
   },
   {
@@ -437,21 +453,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Fitting 2 folds for each of 6 candidates, totalling 12 fits\n"
+      "Fitting 2 folds for each of 5 candidates, totalling 10 fits\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[Parallel(n_jobs=-1)]: Done  12 out of  12 | elapsed:   25.8s finished\n"
+      "[Parallel(n_jobs=-1)]: Done  10 out of  10 | elapsed:  2.9min finished\n"
      ]
     },
     {
@@ -464,58 +480,43 @@
    ],
    "source": [
     "from sklearn.model_selection import GridSearchCV\n",
-    "hyperparameters={'C':[0.001, 0.01, 0.1, 1, 2,5]}\n",
+    "hyperparameters={'C':[ 1, 2,3, 4, 5]}\n",
     "clf_hog_cv = GridSearchCV(LinearSVC(verbose=1, random_state=1), hyperparameters, cv=2, verbose=1, n_jobs=-1,return_train_score=True)\n",
     "\n",
-    "model_hog_gridCV = clf_hog_cv.fit(features_hog_train, np.asarray(y_train))\n",
+    "model_hog_gridCV = clf_hog_cv.fit(features_hog_train, np.asarray(y))\n",
     "#best acc using C=2, about 0.44 on test set"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'mean_fit_time': array([0.6950866 , 0.70285249, 1.19491208, 2.36820626, 3.53367257,\n",
-       "        6.18408477]),\n",
-       " 'std_fit_time': array([0.00781572, 0.06250119, 0.03903544, 0.00603509, 0.01562285,\n",
-       "        0.06421578]),\n",
-       " 'mean_score_time': array([0.0233928 , 0.03123987, 0.00781381, 0.01561725, 0.01562428,\n",
-       "        0.00777233]),\n",
-       " 'std_score_time': array([7.84289837e-03, 1.56186819e-02, 7.81381130e-03, 2.02655792e-06,\n",
-       "        4.29153442e-06, 7.77232647e-03]),\n",
-       " 'param_C': masked_array(data=[0.001, 0.01, 0.1, 1, 2, 5],\n",
-       "              mask=[False, False, False, False, False, False],\n",
+       "{'mean_fit_time': array([22.7839123 , 39.69182801, 55.84927428, 70.95663655, 79.18911958]),\n",
+       " 'std_fit_time': array([0.41390502, 0.2889626 , 0.14057934, 0.53889024, 0.66560578]),\n",
+       " 'mean_score_time': array([0.22648585, 0.15620089, 0.10153008, 0.09371936, 0.07027233]),\n",
+       " 'std_score_time': array([7.80570507e-03, 3.12407017e-02, 7.81011581e-03, 4.17232513e-06,\n",
+       "        7.82930851e-03]),\n",
+       " 'param_C': masked_array(data=[1, 2, 3, 4, 5],\n",
+       "              mask=[False, False, False, False, False],\n",
        "        fill_value='?',\n",
        "             dtype=object),\n",
-       " 'params': [{'C': 0.001},\n",
-       "  {'C': 0.01},\n",
-       "  {'C': 0.1},\n",
-       "  {'C': 1},\n",
-       "  {'C': 2},\n",
-       "  {'C': 5}],\n",
-       " 'split0_test_score': array([0.19776268, 0.31362365, 0.40950859, 0.44346784, 0.44706352,\n",
-       "        0.44107072]),\n",
-       " 'split1_test_score': array([0.2102523 , 0.33880657, 0.39887865, 0.42811374, 0.43251902,\n",
-       "        0.42330797]),\n",
-       " 'mean_test_score': array([0.204 , 0.3262, 0.4042, 0.4358, 0.4398, 0.4322]),\n",
-       " 'std_test_score': array([0.0062448 , 0.01259145, 0.00531496, 0.00767705, 0.00727225,\n",
-       "        0.00888137]),\n",
-       " 'rank_test_score': array([6, 5, 4, 2, 1, 3]),\n",
-       " 'split0_train_score': array([0.21786143, 0.35482579, 0.45214257, 0.51581898, 0.53424109,\n",
-       "        0.54865839]),\n",
-       " 'split1_train_score': array([0.20015981, 0.36356372, 0.43907311, 0.51977627, 0.53615661,\n",
-       "        0.55453456]),\n",
-       " 'mean_train_score': array([0.20901062, 0.35919476, 0.44560784, 0.51779763, 0.53519885,\n",
-       "        0.55159647]),\n",
-       " 'std_train_score': array([0.00885081, 0.00436897, 0.00653473, 0.00197864, 0.00095776,\n",
-       "        0.00293808])}"
+       " 'params': [{'C': 1}, {'C': 2}, {'C': 3}, {'C': 4}, {'C': 5}],\n",
+       " 'split0_test_score': array([0.46488, 0.4662 , 0.46772, 0.46896, 0.47024]),\n",
+       " 'split1_test_score': array([0.46156, 0.4638 , 0.46576, 0.46716, 0.46764]),\n",
+       " 'mean_test_score': array([0.46322, 0.465  , 0.46674, 0.46806, 0.46894]),\n",
+       " 'std_test_score': array([0.00166, 0.0012 , 0.00098, 0.0009 , 0.0013 ]),\n",
+       " 'rank_test_score': array([5, 4, 3, 2, 1]),\n",
+       " 'split0_train_score': array([0.47376, 0.47572, 0.47896, 0.4808 , 0.48248]),\n",
+       " 'split1_train_score': array([0.47744, 0.48164, 0.4854 , 0.48756, 0.48932]),\n",
+       " 'mean_train_score': array([0.4756 , 0.47868, 0.48218, 0.48418, 0.4859 ]),\n",
+       " 'std_train_score': array([0.00184, 0.00296, 0.00322, 0.00338, 0.00342])}"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
