--- a/cifar-analysis.ipynb
+++ b/cifar-analysis.ipynb
@@ -34,6 +34,11 @@
     "from sklearn.decomposition import PCA\n",
     "from sklearn.svm import LinearSVC\n",
     "from sklearn.metrics import accuracy_score, confusion_matrix\n",
+    "from sklearn.model_selection import GridSearchCV, RandomizedCV\n",
+    "from scipy.stats import uniform\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "\n",
+    "from mpl_toolkits.axes_grid1 import ImageGrid\n",
     "\n",
     "%config IPCompleter.greedy=True"
    ]
@@ -161,9 +166,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Because I didn't have access to proper GPU, I used 1/10 of the dataset for training and 1/20 for validation."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 36,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -199,12 +213,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def preprocess_inception (df, only_reshape=False): #function for generating CNN from image data\n",
+    "\n",
+    "def preprocess_inception (df, only_reshape=False): \n",
+    "    #the function first reshapes the input data to proper image format. Later it resizes the imagest to fit InceptionV3 net.\n",
+    "    #The last layer is removed from the net and features are extracted.\n",
+    "    \n",
     "    df_small_reshaped=[]\n",
     "    time_start=time.time() #timer\n",
     "    for i in range(len(df)): \n",
@@ -239,10 +262,12 @@
    "outputs": [],
    "source": [
     "#creating training and test sets using features extraction\n",
-    "features_inception_train = np.load(\"features_inception_train.npy\")\n",
+    "features_inception_train = np.load(\"backups/features_inception_train.npy\")\n",
+    "features_inception_test = np.load(\"backups/features_inception_test.npy\")\n",
     "#features_inception_test = preprocess_inception(x_test)\n",
     "#features_inception_train = preprocess_inception(x_train)\n",
-    "np.save(\"features_inception_train.npy\", features_inception_train)"
+    "#np.save(\"backups/features_inception_train.npy\", features_inception_train)\n",
+    "#np.save(\"backups/features_inception_test.npy\", features_inception_test)"
    ]
   },
   {
@@ -673,8 +698,7 @@
    ],
    "source": [
     "#random hyperparameter search  using cross-validation\n",
-    "from sklearn.model_selection import GridSearchCV\n",
-    "from scipy.stats import uniform\n",
+    "\n",
     "\n",
     "hyperparameters={'C':[0.001, 0.01, 0.1, 1]}\n",
     "clf_cv = GridSearchCV(LinearSVC(verbose=1, random_state=1), hyperparameters, cv=2, verbose=1, n_jobs=-1,return_train_score=True)\n",
@@ -775,7 +799,6 @@
     }
    ],
    "source": [
-    "from sklearn.ensemble import RandomForestClassifier\n",
     "time_start = time.time()\n",
     "\n",
     "clf_gbc = RandomForestClassifier(verbose=1)\n",
@@ -920,8 +943,6 @@
    "source": [
     "#using cross validation to find optimal C\n",
     "#random hyperparameter search  using cross-validation\n",
-    "from sklearn.model_selection import GridSearchCV\n",
-    "from scipy.stats import uniform\n",
     "\n",
     "hyperparameters={'C':[0.001, 0.01, 0.1, 1]}\n",
     "clf_pca_cv = GridSearchCV(LinearSVC(verbose=1, random_state=1), hyperparameters, cv=2, verbose=1, n_jobs=-1,return_train_score=True)\n",
@@ -1484,7 +1505,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "np.save(\"t-sne-1.npy\", tsne_results)"
+    "np.save(\"backups/t-sne-1.npy\", tsne_results)"
    ]
   },
   {
@@ -1496,47 +1517,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from mpl_toolkits.axes_grid1 import ImageGrid\n"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
     "%matplotlib inline"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 113,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "examples_indexes=[]\n",
-    "for number in range(0,11):\n",
-    "    examples_indexes.append( [i for i, n in enumerate(y_train) if n==number][0:10])\n",
-    "\n",
-    "\n",
-    "for i in range(len(examples_indexes)):\n",
-    "    for j in range(len(examples_indexes[i])):\n",
-    "        #print(i,j)\n",
-    "        #print(x_train[examples_indexes[i][j]]*255)\n",
-    "        examples_indexes[i][j]= Image.fromarray((x_train[examples_indexes[i][j]]*255).astype('uint8'), 'RGB')\n",
-    "    \n",
-    "examples_images=[]\n",
-    "for i in examples_indexes:\n",
-    "    examples_images=examples_images+i\n",
-    "\n",
-    "for i in range(1,101):\n",
-    "    plt.subplot(10,10,i)\n",
-    "    plt.imshow(examples_images[i-1])\n",
-    "    plt.axis(\"off\")"
    ]
   },
   {
@@ -1576,96 +1561,6 @@
     "image2.show()\n",
     "#a=image.img_to_array(image2)\n",
     "#a"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 116,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "5000"
-      ]
-     },
-     "execution_count": 116,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(x_train)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 58,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\ProgramData\\Anaconda3\\lib\\site-packages\\skimage\\transform\\_warps.py:84: UserWarning: The default mode, 'constant', will be changed to 'reflect' in skimage 0.15.\n",
-      "  warn(\"The default mode, 'constant', will be changed to 'reflect' in \"\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "image resized\n",
-      "time: 143.5362844467163\n"
-     ]
-    }
-   ],
-   "source": [
-    "\n",
-    "#normalizacja do 0-1\n",
-    "x_train_reshaped=[]\n",
-    "for i in range(len(x_train)):\n",
-    "    x_train_reshaped.append(x_train[i].reshape(3,1024).T.reshape(32,32,3))# /255)\n",
-    "x_train= np.asarray(x_train_reshaped)\n",
-    "del x_train_reshaped\n",
-    "\n",
-    "#ściągnięte- zmienić\n",
-    "time_start = time.time()\n",
-    "x_train_resized = np.array([resize(x_train[i], (139, 139, 3)) \n",
-    "                        for i in range(0, len(x_train))]).astype('float32')\n",
-    "print(\"image resized\")\n",
-    "#inception_input_train = preprocess_input(x_train_resized)\n",
-    "#print('train data preprocessed')\n",
-    "print(\"time:\", time.time()-time_start)\n",
-    "\n",
-    "\n",
-    "#creating and saving cnn codes\n",
-    "model = InceptionV3(weights='imagenet', include_top=False, input_shape=(139, 139, 3))\n",
-    "\n",
-    "time_start = time.time()\n",
-    "features_inception = model.predict(x_train_resized, verbose=1)\n",
-    "print(\"features predicted\")\n",
-    "features_inception = np.squeeze(features_inception)\n",
-    "np.save('features_inception_train.npy', features_inception)\n",
-    "print('bottleneck features saved (train)')\n",
-    "print(\"time:\", time.time()-time_start)\n",
-    "\n",
-    "features_inception = features_inception.reshape((5000, 3*3*2048))\n",
-    "#saving enlarged images\n",
-    "#np.save(\"train_139_inception.npy\", x_train_resized)\n",
-    "\n",
-    "#creating and saving cnn codes\n",
-    "model = InceptionV3(weights='imagenet', include_top=False, input_shape=(139, 139, 3))\n",
-    "\n",
-    "time_start = time.time()\n",
-    "features_inception = model.predict(x_train_resized, verbose=1)\n",
-    "print(\"features predicted\")\n",
-    "features_inception = np.squeeze(features_inception)\n",
-    "np.save('features_inception_train.npy', features_inception)\n",
-    "print('bottleneck features saved (train)')\n",
-    "print(\"time:\", time.time()-time_start)\n",
-    "\n",
-    "features_inception = features_inception.reshape((5000, 3*3*2048))"
    ]
   }
  ],
