--- a/cifar-analysis.ipynb
+++ b/cifar-analysis.ipynb
@@ -828,19 +828,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.7271111111111112\n"
+      "Accuracy:  0.7271\n"
      ]
     }
    ],
    "source": [
-    "print(accuracy_score(predicted_svm_pca, y_test))\n",
+    "print(\"Accuracy: \",round(accuracy_score(predicted_svm_pca, y_test),4))\n",
     "#accuracy is lower than using data without pca transformation"
    ]
   },
@@ -957,82 +957,6 @@
    "metadata": {},
    "source": [
     "Accuracy obtained on the test set is a little bit higher than using SVM classifier."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Using gradient boosting as alternative model"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 39,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "model created\n",
-      "model fitted\n",
-      "time: 9.75406551361084\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[Parallel(n_jobs=1)]: Done  10 out of  10 | elapsed:    8.7s finished\n"
-     ]
-    }
-   ],
-   "source": [
-    "time_start = time.time()\n",
-    "\n",
-    "clf_gbc = RandomForestClassifier(verbose=1)\n",
-    "print(\"model created\")\n",
-    "fitted_inception_gbc = clf_gbc.fit(features_inception_train/to_norm, np.asarray(y_train))  \n",
-    "print(\"model fitted\")\n",
-    "print(\"time:\", time.time()-time_start)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 40,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.4666666666666667\n",
-      "[[117  12  38  25  31  11  13  17  33  27]\n",
-      " [ 17 159   7  10   4   6   3   4  17  28]\n",
-      " [ 25   5  67  30  29  26  39  22  14   1]\n",
-      " [  6   6  20  71  19  47  43  21   5   4]\n",
-      " [ 13   0  32  16  93   9  35  22  11   8]\n",
-      " [  4   2  12  22   1 101   6  20   5   1]\n",
-      " [ 12   1  17  21  23   7 116   4   2   4]\n",
-      " [  4   1   9  12  21  15   1 107   5   3]\n",
-      " [ 19  12   9   9   3   2   5   7 105  15]\n",
-      " [ 13  23   3   4   4   3   0   4  19 114]]\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[Parallel(n_jobs=1)]: Done  10 out of  10 | elapsed:    0.1s finished\n"
-     ]
-    }
-   ],
-   "source": [
-    "inception_predicted_gbc_test = fitted_inception_gbc.predict(features_inception_test/to_norm)\n",
-    "print(accuracy_score(inception_predicted_gbc_test, np.asarray(y_test)))\n",
-    "print(confusion_matrix(inception_predicted_gbc_test, np.asarray(y_test)))\n",
-    "#chujowy znowu"
    ]
   }
  ],
