added displaying photos

--- a/cifar-analysis.ipynb
+++ b/cifar-analysis.ipynb
@@ -214,6 +214,41 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### Wisualising the images"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from mpl_toolkits.axes_grid1 import ImageGrid\n",
+    "%matplotlib inline\n",
+    "examples_indexes=[]\n",
+    "for number in range(0,11):\n",
+    "    examples_indexes.append( [i for i, n in enumerate(y_train) if n==number][0:10])\n",
+    "\n",
+    "\n",
+    "for i in range(len(examples_indexes)):\n",
+    "    for j in range(len(examples_indexes[i])):\n",
+    "\n",
+    "        examples_indexes[i][j]= Image.fromarray((x_train[examples_indexes[i][j]]*255).astype('uint8'), 'RGB')\n",
+    "    \n",
+    "examples_images=[]\n",
+    "for i in examples_indexes:\n",
+    "    examples_images=examples_images+i\n",
+    "\n",
+    "for i in range(1,101):\n",
+    "    plt.subplot(10,10,i)\n",
+    "    plt.imshow(examples_images[i-1])\n",
+    "    plt.axis(\"off\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Training shallow classifier"
    ]
   },
