--- a/cifar-analysis.ipynb
+++ b/cifar-analysis.ipynb
@@ -1,6 +1,27 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# CIFAR-10 images classification challenge"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Loading data and checking structure"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's do some exploratory data analysis. First we'll load the data from the files downloaded from CIFAR website."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -19,42 +40,32 @@
     "import pickle\n",
     "import collections\n",
     "import time\n",
-    "\n",
-    "from keras.preprocessing import image\n",
     "from PIL import Image\n",
-    "from keras.applications.inception_v3 import InceptionV3\n",
-    "\n",
+    "from mpl_toolkits.axes_grid1 import ImageGrid\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
-    "from sklearn.model_selection import train_test_split\n",
+    "import pandas as pd\n",
+    "\n",
+    "#keras\n",
+    "from keras.preprocessing import image\n",
+    "from keras.models import Sequential\n",
+    "from keras.layers import Dense, Dropout\n",
+    "from keras.applications.inception_v3 import InceptionV3\n",
+    "\n",
+    "#skimage library\n",
     "from skimage.transform import resize\n",
     "from skimage.feature import hog\n",
-    "from sklearn import svm\n",
+    "\n",
+    "#sklearn library\n",
     "from sklearn.manifold import TSNE\n",
     "from sklearn.decomposition import PCA\n",
     "from sklearn.svm import LinearSVC\n",
     "from sklearn.metrics import accuracy_score, confusion_matrix\n",
-    "from sklearn.model_selection import GridSearchCV, RandomizedSearchCV\n",
-    "from scipy.stats import uniform\n",
+    "from sklearn.model_selection import GridSearchCV, RandomizedSearchCV, train_test_split\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
     "\n",
-    "from mpl_toolkits.axes_grid1 import ImageGrid\n",
     "\n",
     "%config IPCompleter.greedy=True"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Loading data and checking structure"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Let's do some exploratory data analysis. First we'll load the data from the files downloaded from CIFAR website."
    ]
   },
   {
@@ -223,7 +234,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from mpl_toolkits.axes_grid1 import ImageGrid\n",
     "%matplotlib inline\n",
     "examples_indexes=[]\n",
     "for number in range(0,11):\n",
@@ -256,7 +266,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "To serve as a benchmark for next tests, I'm using HOG technique to extract features from the images and then I'm training SVM classifier."
+    "To serve as a benchmark for next tests, I'm using HOG technique to extract features from the images and then I'm training SVM classifier on top of it."
    ]
   },
   {
@@ -281,28 +291,6 @@
     "features_hog_test= preprocess_inception(x_test, only_reshape=True)\n",
     "features_hog_train=np.squeeze((0.21 * features_hog_train[:,:,:,:1]) + (0.72 * features_hog_train[:,:,:,1:2]) + (0.07 * features_hog_train[:,:,:,-1:]))\n",
     "features_hog_test=np.squeeze((0.21 * features_hog_test[:,:,:,:1]) + (0.72 * features_hog_test[:,:,:,1:2]) + (0.07 * features_hog_test[:,:,:,-1:]))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\ProgramData\\Anaconda3\\lib\\site-packages\\skimage\\feature\\_hog.py:119: skimage_deprecation: Default value of `block_norm`==`L1` is deprecated and will be changed to `L2-Hys` in v0.15\n",
-      "  'be changed to `L2-Hys` in v0.15', skimage_deprecation)\n"
-     ]
-    }
-   ],
-   "source": [
-    "hog_features_train=[]\n",
-    "for image in features_hog_train:\n",
-    "    hog_features_train.append( hog(image, orientations=8))\n",
-    "\n",
-    "hog_features_train=np.asarray(hog_features_train)"
    ]
   },
   {
@@ -367,7 +355,7 @@
     }
    ],
    "source": [
-    "hog_predicted = hog_fitted.predict(features_hog_test)\n"
+    "hog_predicted = hog_fitted.predict(features_hog_test)"
    ]
   },
   {
@@ -426,7 +414,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As the shallow classifier didn't perform well, I'm going to try transfer learning approach. First step is to extract features using InceptionV3 model, but with removed last layer. Next I visualize obtained features. Then I check some out-of-the box SVM classifier and see how it performs. Lastly I use GridSeach cross validation to select best penalty for the model (c)."
+    "As the shallow classifier didn't perform well, I'm going to try transfer learning approach. First step is to extract features using InceptionV3 model, but with removed last layer. Next I visualize obtained features. Then I check some out-of-the box SVM classifier and see how it performs. Lastly I use GridSeach cross validation to select best penalty for the model (C parameter)."
    ]
   },
   {
@@ -919,8 +907,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from keras.models import Sequential\n",
-    "from keras.layers import Dense, Dropout\n",
+    "\n",
     "#creating some basic model\n",
     "model_custom= Sequential()\n",
     "model_custom.add(Dense(units=400, input_dim=18432, activation='relu'))\n",
