--- a/cifar-analysis.ipynb
+++ b/cifar-analysis.ipynb
@@ -37,6 +37,9 @@
     }
    ],
    "source": [
+    "#importing libraries\n",
+    "\n",
+    "#general libraries\n",
     "import pickle\n",
     "import collections\n",
     "import time\n",
@@ -46,11 +49,12 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "\n",
-    "#keras\n",
+    "#keras library\n",
     "from keras.preprocessing import image\n",
     "from keras.models import Sequential\n",
     "from keras.layers import Dense, Dropout\n",
     "from keras.applications.inception_v3 import InceptionV3\n",
+    "from keras.utils import np_utils\n",
     "\n",
     "#skimage library\n",
     "from skimage.transform import resize\n",
@@ -64,7 +68,7 @@
     "from sklearn.model_selection import GridSearchCV, RandomizedSearchCV, train_test_split\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
     "\n",
-    "\n",
+    "#ipython magics\n",
     "%config IPCompleter.greedy=True"
    ]
   },
@@ -149,7 +153,7 @@
     "print(\"Keys of one batch dictionary are: \", list(batch1.keys()))\n",
     "print(\"Shape of dataset is \", batch1[b'data'].shape)\n",
     "\n",
-    "print(\"Checking the distribution of labels: \", collections.Counter(batch1[b'labels']))"
+    "print(\"Checking the distribution of labels: \", dict(collections.Counter(batch1[b'labels'])))"
    ]
   },
   {
@@ -259,7 +263,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Training shallow classifier"
+    "## Training a shallow classifier"
    ]
   },
   {
@@ -894,7 +898,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from keras.utils import np_utils\n",
+    "\n",
     "\n",
     "# one-hot encode the labels\n",
     "y_train_onehot = np_utils.to_categorical(y_train, 10)\n",
