--- a/cifar-analysis.ipynb
+++ b/cifar-analysis.ipynb
@@ -455,10 +455,10 @@
    "outputs": [],
    "source": [
     "#creating training and test sets using features extraction\n",
-    "features_inception_train = np.load(\"backups/features_inception_train.npy\")\n",
-    "features_inception_test = np.load(\"backups/features_inception_test.npy\")\n",
-    "#features_inception_test = preprocess_inception(x_test)\n",
-    "#features_inception_train = preprocess_inception(x_train)\n",
+    "#features_inception_train = np.load(\"backups/features_inception_train.npy\")\n",
+    "#features_inception_test = np.load(\"backups/features_inception_test.npy\")\n",
+    "features_inception_test = preprocess_inception(x_test)\n",
+    "features_inception_train = preprocess_inception(x_train)\n",
     "#np.save(\"backups/features_inception_train.npy\", features_inception_train)\n",
     "#np.save(\"backups/features_inception_test.npy\", features_inception_test)"
    ]
